buildscript {
    repositories {
    	mavenCentral()
	    maven { setUrl("https://maven.vaadin.com/vaadin-prereleases") }
        maven { setUrl("https://maven.vaadin.com/vaadin-addons") }
		}
}
plugins {
	id 'org.springframework.boot' version '2.7.1'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
	id 'com.vaadin'
}

defaultTasks("clean", "build")

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
	maven { setUrl("https://maven.vaadin.com/vaadin-prereleases") }
	maven { setUrl("https://maven.vaadin.com/vaadin-addons") }
}

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

dependencies {
	implementation('com.vaadin:vaadin-spring-boot-starter')
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	// https://mvnrepository.com/artifact/org.projectlombok/lombok
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.26'

	annotationProcessor('org.projectlombok:lombok:1.18.26')
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security'
	implementation group: 'org.springframework.security', name: 'spring-security-core'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
	compileOnly group: 'com.vaadin', name: 'flow-server'

	implementation group: 'com.xdev-software', name: 'vaadin-maps-leaflet-flow', version: '2.0.4'
	implementation group: 'org.danilopianini', name: 'de.saring.leafletmap', version: '1.0.5'
	implementation group: 'com.vaadin', name: 'vaadin-map-flow'
// https://mvnrepository.com/artifact/org.webjars.bower/jquery
	implementation group: 'org.webjars.bower', name: 'jquery', version: '3.6.3'

	runtimeOnly 'org.postgresql:postgresql:42.3.6'

}

dependencyManagement {
	imports {
		mavenBom "com.vaadin:vaadin-bom:$vaadinVersion"
	}
}

test {
	useJUnitPlatform()
}

// The following pnpmEnable = true is not needed as pnpm is used by default,
// this is just an example of how to configure the Gradle Vaadin Plugin:
// for more configuration options please see: https://vaadin.com/docs/latest/guide/start/gradle/#all-options
// vaadin {
// 	pnpmEnable = true
// }
